@@ -50,6 +50,11 @@ See the end of the file for license conditions.
   --mean-error: Measure the error of the mean for each label (object or
     clump).
 
+*** astscript-fits-view
+
+  --topcat4k (or '-k') option is added for easy display on 4K monitors
+    (where the TOPCAT window can be very small by default).
+
 *** astscript-radial-profile
 
   --azimuth option can be called multiple times so the profile is generated
